[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Anshita Rayalla", email = "royalanshita@gmail.com"}]
name = "assignment1"
description = "Assignment One from Anshita382 -- Spring 2025"
version = "1.0"
readme = "README.md"

[project.urls]
Task = "https://ufdatastudio.com/cis6930sp25/assignments/1"
repository = "https://github.com/Anshita382/assignment1.git"

[tool.pytest.ini_options]
testpaths = ["tests"]

